@@ -2482,8 +2482,9 @@ const CommandDesc set_face_cmd = {
     "    <fg color>[,<bg color>[,<underline color>]][+<attributes>][@<base>]\n"
     "colors are either a color name, rgb:######, or rgba:######## values.\n"
     "attributes is a combination of:\n"
-    "    u: underline, c: curly underline, i: italic, b: bold,\n"
-    "    r: reverse,   s: strikethrough,   B: blink,  d: dim,\n"
+    "    u: underline, c: curly underline, U: double underline,\n"
+    "    i: italic,            b: bold,            r: reverse,\n"
+    "    s: strikethrough,     B: blink,           d: dim,\n"
     "    f: final foreground,              g: final background,\n"
     "    a: final attributes,              F: same as +fga\n"
     "facespec can as well just be the name of another face.\n"
